<resources>
    <string name="app_name">COMP 4985 - Assignment3</string>
    <string name="connectStr">Connect</string>
    <string name="ip_addressStr">Host</string>
    <string name="port">Port</string>
    <string name="your_nameStr">Your name</string>

    <string name="send">Start Sending</string>
    <string name="disconnect">Disconnect</string>
    <string name="stop_sending">Stop Sending</string>
    <string name="current_data">Current Data:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="timestamp">Timestamp:</string>
</resources>
